Fixed alt tags, buttons spilling over

--- a/index.css
+++ b/index.css
@@ -1,68 +1,69 @@
 h1 {
-    font-family: 'Big Shoulders Display', cursive;
-    text-transform: uppercase;
-    font-weight: 900!important;
-    color:hsl(0, 0%, 95%);
-    padding-top: 25px;
+  font-family: "Big Shoulders Display", cursive;
+  text-transform: uppercase;
+  font-weight: 900 !important;
+  color: hsl(0, 0%, 95%);
+  padding-top: 25px;
 }
 
 p {
-    font-family: 'Lexend Deca', sans-serif;
-    color: hsla(0, 0%, 100%, 0.75);
-    padding-top: 25px;
-    padding-bottom: 75px;
+  font-family: "Lexend Deca", sans-serif;
+  color: hsla(0, 0%, 100%, 0.75);
+  padding-top: 25px;
+  padding-bottom: 75px;
 }
 
-body{
-    font-size: 15px;
+body {
+  font-size: 15px;
 }
 
-button{
-    font-family: 'Lexend Deca', sans-serif;
-    background-color: hsl(0, 0%, 95%);
-    border-radius: 25px!important;
-    border: 1px solid white;
-    padding: 10px 30px;
+button {
+  font-family: "Lexend Deca", sans-serif;
+  background-color: hsl(0, 0%, 95%);
+  border-radius: 25px !important;
+  border: 1px solid white;
+  padding: 10px 30px;
+  white-space: nowrap;
 }
 
-#sedans{
-    background-color: hsl(31, 77%, 52%);
+#sedans {
+  background-color: hsl(31, 77%, 52%);
 }
 
-#suvs{
-    background-color: hsl(184, 100%, 22%);
+#suvs {
+  background-color: hsl(184, 100%, 22%);
 }
 
-#luxury{
-    background-color: hsl(179, 100%, 13%);
+#luxury {
+  background-color: hsl(179, 100%, 13%);
 }
 
-#sedanbutton{
-    color: hsl(31, 77%, 52%);
+#sedanbutton {
+  color: hsl(31, 77%, 52%);
 }
 
-#suvbutton{
-    color: hsl(184, 100%, 22%);
+#suvbutton {
+  color: hsl(184, 100%, 22%);
 }
 
-#luxurybutton{
-    color: hsl(179, 100%, 13%);
+#luxurybutton {
+  color: hsl(179, 100%, 13%);
 }
 
-#sedanbutton:hover{
-    background-color: hsl(31, 77%, 52%);
-    color: white;
-    border: 1px solid white;
+#sedanbutton:hover {
+  background-color: hsl(31, 77%, 52%);
+  color: white;
+  border: 1px solid white;
 }
 
-#suvbutton:hover{
-    background-color: hsl(184, 100%, 22%);
-    color: white;
-    border: 1px solid white;
+#suvbutton:hover {
+  background-color: hsl(184, 100%, 22%);
+  color: white;
+  border: 1px solid white;
 }
 
-#luxurybutton:hover{
-    background-color: hsl(179, 100%, 13%);
-    color: white;
-    border: 1px solid white;
+#luxurybutton:hover {
+  background-color: hsl(179, 100%, 13%);
+  color: white;
+  border: 1px solid white;
 }
